--- a/Izburs.Web/Areas/Admin/Views/Galeri/Goster.cshtml
+++ b/Izburs.Web/Areas/Admin/Views/Galeri/Goster.cshtml
@@ -61,7 +61,7 @@
                                                         @foreach (var item in Model)
                                                         {
                                                         <tr>
-                                                            <td>@item.Id<td>
+                                                            <td>@item.Id</td>
                                                             <td><img src="@item.Resim" height="75" width="150" /></td>
                                                             <td>@item.KayitTarihi.ToShortDateString()</td>
                                                             <td>@item.GuncellemeTarihi.ToShortDateString()</td>
