--- a/Izburs.Web/Areas/Admin/Views/Galeri/Kategori.cshtml
+++ b/Izburs.Web/Areas/Admin/Views/Galeri/Kategori.cshtml
@@ -52,7 +52,7 @@
                                         </div>
                                         <div class="card-block">
                                             @*<h4 class="sub-title">Basic Inputs</h4>*@
-                                            <form asp-action="KatEkle" asp-controller="Galeri" asp-area="Admin" method="post" enctype="multipart/form-data">
+                                            <form asp-action="Kategori" asp-controller="Galeri" asp-area="Admin" method="post" enctype="multipart/form-data">
                                                 @*<div asp-validation-summary="All" class="text-danger"></div>*@
 
                                                 @{
