Öğrenci kabulun yapılması, Öğrenci şifre unuttum mail template hazırlanması,Öğrenci hoşgeldin template hazırlanması ve bunların mail gönderiminin yapılması

--- a/Izburs.Web/Views/Ogrenci/SifremiUnuttum.cshtml
+++ b/Izburs.Web/Views/Ogrenci/SifremiUnuttum.cshtml
@@ -12,7 +12,7 @@
                         if (data == "ok") {
                             $("#sonuc").append("<div class='alert alert-success'>Tebrikler! Şifre Sıfırlama Mailiniz Email adresinize gönderilmiştir.</div>");
                         } else {
-                            $("#sonuc").append("<div class='alert alert-danger'>Hata! Şifre Sıfırlama Başarısız oldu.</div>");
+                            $("#sonuc").append("<div class='alert alert-danger'>Hata! Şifre Sıfırlama Başarısız oldu.(Mail Kayıtlı olmayabilir)</div>");
                         }
                     }
 
