--- a/Izburs.Web/Views/Ogrenci/Profil.cshtml
+++ b/Izburs.Web/Views/Ogrenci/Profil.cshtml
@@ -74,7 +74,7 @@
                             <a class="btn btn-danger btn-flat mt-10 mb-sm-30" href="/Ogrenci/Cikis">Çıkış</a>
                         </div>
                     </div>
-                    @TempData["Durum"]
+                    @Html.Raw(TempData["Durum"])
                     <div class="col-xs-12 col-sm-8 col-md-8">
                         <form name="editprofile-form" method="post" action="/Ogrenci/ProfilGuncelle" enctype="multipart/form-data">
                             <div class="icon-box mb-0 p-0">
@@ -106,7 +106,7 @@
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Doğum Tarihi</label>
-                                    <input asp-for="DogumTarihi" name="DogumTarihi" class="form-control" type="date" value="@Model.DogumTarihi.ToShortDateString()">
+                                    <input asp-for="DogumTarihi" name="DogumTarihi" class="form-control" type="date" value="@Model.DogumTarihi.ToShortDateString()" placeholder="@Model.DogumTarihi.ToShortDateString()">
                                 </div>
                             </div>
                             @*<div class="row">
