Anasayfa Etkinlik ve Sık Sorulan Sorular modülünün yapımı

--- a/Izburs.Web/Views/Home/Index.cshtml
+++ b/Izburs.Web/Views/Home/Index.cshtml
@@ -256,91 +256,9 @@
     <div class="container pb-50">
         <div class="section-content">
             <div class="row">
-                <div class="col-md-6">
-                    <h3 class="text-uppercase line-bottom mt-0 line-height-1"><i class="fa fa-calendar mr-10"></i>Izburs <span class="text-theme-color-2">Etkinlikler</span></h3>
-                    <article class="post media-post clearfix pb-0 mb-10">
-                        <a href="#" class="post-thumb mr-20"><img alt="" src="/Shared/images/event/1.jpg"></a>
-                        <div class="post-right">
-                            <h4 class="mt-0 mb-5"><a href="#">Upcoming Event Title</a></h4>
-                            <ul class="list-inline font-12 mb-5">
-                                <li class="pr-0"><i class="fa fa-calendar mr-5"></i> June 26, 2016 |</li>
-                                <li class="pl-5"><i class="fa fa-map-marker mr-5"></i>New York</li>
-                            </ul>
-                            <p class="mb-0 font-13">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas eveniet, nemo dicta. Ullam nam.</p>
-                            <a class="text-theme-colored font-13" href="#">Read More →</a>
-                        </div>
-                    </article>
-                    <article class="post media-post clearfix pb-0 mb-10">
-                        <a href="#" class="post-thumb mr-20"><img alt="" src="/Shared/images/event/2.jpg"></a>
-                        <div class="post-right">
-                            <h4 class="mt-0 mb-5"><a href="#">Upcoming Event Title</a></h4>
-                            <ul class="list-inline font-12 mb-5">
-                                <li class="pr-0"><i class="fa fa-calendar mr-5"></i> June 26, 2016 |</li>
-                                <li class="pl-5"><i class="fa fa-map-marker mr-5"></i>New York</li>
-                            </ul>
-                            <p class="mb-0 font-13">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas eveniet, nemo dicta. Ullam nam.</p>
-                            <a class="text-theme-colored font-13" href="#">Read More →</a>
-                        </div>
-                    </article>
-                    <article class="post media-post clearfix pb-0 mb-10">
-                        <a href="#" class="post-thumb mr-20"><img alt="" src="/Shared/images/event/3.jpg"></a>
-                        <div class="post-right">
-                            <h4 class="mt-0 mb-5"><a href="#">Upcoming Event Title</a></h4>
-                            <ul class="list-inline font-12 mb-5">
-                                <li class="pr-0"><i class="fa fa-calendar mr-5"></i> June 26, 2016 |</li>
-                                <li class="pl-5"><i class="fa fa-map-marker mr-5"></i>New York</li>
-                            </ul>
-                            <p class="mb-0 font-13">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas eveniet, nemo dicta. Ullam nam.</p>
-                            <a class="text-theme-colored font-13" href="#">Read More →</a>
-                        </div>
-                    </article>
-                </div>
-                <div class="col-md-6">
-                    <h3 class="line-bottom mt-0 line-height-1">Why <span class="text-theme-color-2">Sık Sorulan Sorular?</span></h3>
-                    <p class="mb-10">The Cweren Law Firm is a recognized leader in landlord tenant representation throughout Texas.The largest professional property.</p>
-                    <div id="accordion1" class="panel-group accordion">
-                        <div class="panel">
-                            <div class="panel-title"> <a class="active" data-parent="#accordion1" data-toggle="collapse" href="#accordion11" aria-expanded="true"> <span class="open-sub"></span> Why this Company is Best?</a> </div>
-                            <div id="accordion11" class="panel-collapse collapse in" role="tablist" aria-expanded="true">
-                                <div class="panel-content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore impedit quae repellendus provident dolor iure poss imusven am aliquam. Officiis totam ea laborum deser unt vonsess.  iure poss imusven am aliquam</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel">
-                            <div class="panel-title"> <a data-parent="#accordion1" data-toggle="collapse" href="#accordion12" class="" aria-expanded="true"> <span class="open-sub"></span> Why this Company is Best?</a> </div>
-                            <div id="accordion12" class="panel-collapse collapse" role="tablist" aria-expanded="true">
-                                <div class="panel-content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore impedit quae repellendus provident dolor iure poss imusven am aliquam. Officiis totam ea laborum deser unt vonsess.  iure poss imusven am aliquam</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel">
-                            <div class="panel-title"> <a data-parent="#accordion1" data-toggle="collapse" href="#accordion13" class="" aria-expanded="true"> <span class="open-sub"></span> Why this Company is Best?</a> </div>
-                            <div id="accordion13" class="panel-collapse collapse" role="tablist" aria-expanded="true">
-                                <div class="panel-content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore impedit quae repellendus provident dolor iure poss imusven am aliquam. Officiis totam ea laborum deser unt vonsess.  iure poss imusven am aliquam</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel">
-                            <div class="panel-title"> <a data-parent="#accordion1" data-toggle="collapse" href="#accordion14" class="" aria-expanded="true"> <span class="open-sub"></span> Why this Company is Best?</a> </div>
-                            <div id="accordion14" class="panel-collapse collapse" role="tablist" aria-expanded="true">
-                                <div class="panel-content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore impedit quae repellendus provident dolor iure poss imusven am aliquam. Officiis totam ea laborum deser unt vonsess.  iure poss imusven am aliquam</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel">
-                            <div class="panel-title"> <a data-parent="#accordion1" data-toggle="collapse" href="#accordion15" class="" aria-expanded="true"> <span class="open-sub"></span> Why this Company is Best?</a> </div>
-                            <div id="accordion15" class="panel-collapse collapse" role="tablist" aria-expanded="true">
-                                <div class="panel-content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore impedit quae repellendus provident dolor iure poss imusven am aliquam. Officiis totam ea laborum deser unt vonsess.  iure poss imusven am aliquam</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                @await Component.InvokeAsync("Etkinlik")
+                @await Component.InvokeAsync("SSS")
+ 
             </div>
         </div>
     </div>
