sık sorulan sorular modülü

--- a/Izburs.Web/Views/Shared/Components/SSS/default.cshtml
+++ b/Izburs.Web/Views/Shared/Components/SSS/default.cshtml
@@ -5,8 +5,8 @@
 }
 
 <div class="col-md-6">
-    <h3 class="line-bottom mt-0 line-height-1">Why <span class="text-theme-color-2">Sık Sorulan Sorular?</span></h3>
-    <p class="mb-10">The Cweren Law Firm is a recognized leader in landlord tenant representation throughout Texas.The largest professional property.</p>
+    <h3 class="line-bottom mt-0 line-height-1">Sık Sorulan <span class="text-theme-color-2"> Sorular?</span></h3>
+    @*<p class="mb-10">The Cweren Law Firm is a recognized leader in landlord tenant representation throughout Texas.The largest professional property.</p>*@
     <div id="accordion1" class="panel-group accordion">
         @foreach (var item in Model)
         {
