--- a/Izburs.Web/Views/Shared/_Layout.cshtml
+++ b/Izburs.Web/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <div class="widget dark">
-                            <h4 class="widget-title line-bottom-theme-colored-2">Opening Hours</h4>
+                            <h4 class="widget-title line-bottom-theme-colored-2">Mesai Saatlerimiz</h4>
                             <div class="opening-hours">
                                 <ul class="list-border">
                                     <li class="clearfix">
@@ -128,7 +128,7 @@
                                         <div class="value pull-right"> 8.00 - 12.00  </div>
                                     </li>
                                     <li class="clearfix">
-                                        <span> Pazar : </span>
+                                        <span>Cumartesi-Pazar : </span>
                                         <div class="value pull-right"> Kapalı </div>
                                     </li>
                                 </ul>
@@ -161,18 +161,18 @@
                     </div>
                     <div class="col-md-5 col-md-offset-2">
                         <div class="widget dark">
-                            <h5 class="widget-title mb-10">Subscribe Us</h5>
+                            <h5 class="widget-title mb-10">Haberdar Ol</h5>
                             <!-- Mailchimp Subscription Form Starts Here -->
                             <form id="mailchimp-subscription-form-footer" class="newsletter-form">
                                 <div class="input-group">
-                                    <input type="email" value="" name="EMAIL" placeholder="Your Email" class="form-control input-lg font-16" data-height="45px" id="mce-EMAIL-footer">
+                                    <input type="email" value="" name="EMAIL" placeholder="Email Adresiniz" class="form-control input-lg font-16" data-height="45px" id="mce-EMAIL-footer">
                                     <span class="input-group-btn">
-                                        <button data-height="45px" class="btn bg-theme-color-2 text-white btn-xs m-0 font-14" type="submit">Subscribe</button>
+                                        <button data-height="45px" class="btn bg-theme-color-2 text-white btn-xs m-0 font-14" type="submit">Ekle</button>
                                     </span>
                                 </div>
                             </form>
                             <!-- Mailchimp Subscription Form Validation-->
-                            <script type="text/javascript">
+                            <!--<script type="text/javascript">
                                 $('#mailchimp-subscription-form-footer').ajaxChimp({
                                     callback: mailChimpCallBack,
                                     url: '//thememascot.us9.list-manage.com/subscribe/post?u=a01f440178e35febc8cf4e51f&amp;id=49d6d30e1e'
@@ -190,7 +190,7 @@
                                     }
                                     $mailchimpform.prepend($response);
                                 }
-                            </script>
+                            </script>-->
                             <!-- Mailchimp Subscription Form Ends Here -->
                         </div>
                     </div>
