Haber ve etkinliklerin güncellenmesi

--- a/Izburs.Web/Views/Basvuru/Index.cshtml
+++ b/Izburs.Web/Views/Basvuru/Index.cshtml
@@ -116,8 +116,8 @@
                                 <div asp-validation-summary="All" class="text-danger"></div>
                                 <div class="form-group">
                                     <label>Resminizi Seçiniz</label>
-                                    <input asp-for="Kullanici.Resim" class="file" name="Resim" type="file" multiple data-show-upload="false" data-show-caption="true">
-                                    <span asp-validation-for="@Model.Kullanici.Resim" class="text-danger"></span>
+                                    <input  class="file" name="Resim" type="file" multiple data-show-upload="false" data-show-caption="true">
+                                 @*   <span asp-validation-for="@Model.Kullanici.Resim" class="text-danger"></span>*@
                                     <small>Yükleyeceğiniz resim jpg formatında olsun ve 1200*800 boyutlarını geçmesin lütfen.</small>
                                 </div>
                                 <div class="row">
